plugins {
    id 'org.jetbrains.intellij' version '1.17.2'
    id 'java'
}

group 'org.zkoss.zkidea'
version '0.6.0'

repositories {
    mavenCentral()
    maven { url 'https://www.jetbrains.com/intellij-repository/releases' }

    maven { url "https://cache-redirector.jetbrains.com/intellij-dependencies" }
}

dependencies {
    implementation 'org.jsoup:jsoup:1.13.1'

    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
    testImplementation 'org.junit.platform:junit-platform-suite:1.8.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
    testImplementation 'org.mockito:mockito-inline:4.6.1'
}

intellij {
    version = '2023.3'
    plugins = ['maven', 'com.intellij.java']
}
patchPluginXml {
    sinceBuild = '233.2'
    untilBuild = '253.*'
}

java.sourceCompatibility = JavaVersion.VERSION_17
java.targetCompatibility = JavaVersion.VERSION_17

test {
    useJUnitPlatform()
}